feat: get booking
